# DarkRadiant

./: .gitignore  CMakeLists.txt  install.cmake
.github/workflows/: build.yml
doc/: CMakeLists.txt  manual.adoc
include/: Bounded.h  iarray.h  icommandsystem.h  icomparablenode.h  ideclmanager.h  ieclass.h  ieclasscolours.h  ientity.h  ifilter.h  imapformat.h  imodule.h  inode.h  iparticles.h  ipreferencesystem.h  iregistry.h  irenderable.h  iscatter.h  iscript.h  ishaders.h  itextstream.h
include/ui/: iusercontrol.h
install/: input.xml  menu.xml  user.xml
install/scripts/: test.py
install/ui/: arraydialog.fbp  conversationdialog.fbp  conversationdialog.xrc  conversationeditor.fbp  conversationeditor.xrc  difficultyeditor.fbp  difficultyeditor.xrc  filterdialog.fbp  filterdialog.xrc  filtereditor.fbp  filtereditor.xrc  scatterdialog.fbp
libs/: eclass.h  entitylib.h  maplib.h
libs/decl/: DeclarationBase.h  EditableDeclaration.h
plugins/dm.conversation/: ActorNodeFinder.h  CMakeLists.txt  CommandArgumentItem.cpp  CommandEditor.cpp  ConversationCommandInfo.cpp  ConversationCommandInfo.h  ConversationCommandLibrary.cpp  ConversationDialog.cpp  ConversationEntity.cpp  ConversationEntityFinder.h  plugin.cpp
plugins/dm.difficulty/: CMakeLists.txt  ClassNameStore.cpp  ClassNameStore.h  DifficultyDialog.cpp  DifficultyDialog.h  DifficultyEntityFinder.h  DifficultySettings.cpp  DifficultySettings.h  DifficultySettingsManager.cpp  plugin.cpp
plugins/dm.editing/: AIEditingPanel.cpp  AIHeadChooserDialog.cpp  AIVocalSetChooserDialog.cpp  AIVocalSetPreview.cpp  AIVocalSetPreview.h  CMakeLists.txt  DeprecatedEclassCollector.h  SpawnargReplacer.h  ThreadedEntityDefPopulator.h  plugin.cpp
plugins/sound/: CMakeLists.txt  SoundManager.cpp  SoundManager.h  SoundShader.cpp  SoundShader.h
radiant/: CMakeLists.txt
radiantcore/: CMakeLists.txt  Radiant.cpp  Radiant.h
test/: Basic.cpp  Curves.cpp  DeclManager.cpp  Entity.cpp  EntityClass.cpp  EntityInspector.cpp  FakeClipboardModule.h  Favourites.cpp  Filters.cpp  HeadlessOpenGLContext.cpp  HeadlessOpenGLContext.h  MapMerging.cpp  MapSavingLoading.cpp  Materials.cpp  ModelExport.cpp  ModelScale.cpp  Models.cpp  Particles.cpp  RadiantTest.h  Renderer.cpp  SceneNode.cpp  Selection.cpp  Skin.cpp  SoundManager.cpp  TestContext.h  TestOrthoViewManager.cpp  TestOrthoViewManager.h  UndoRedo.cpp  VFS.cpp  WorldspawnColour.cpp
(+429 files in other folders)
